--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run css:validate && vite build",
     "preview": "vite preview",
     "start": "node server.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
+    "css:validate": "node scripts/css-validate.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "vitest",
